--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build:umd": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
+        "material-ui": "next",
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
