--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "material-ui": "next",
+        "normalize.css": "^7.0.0",
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
@@ -26,8 +27,10 @@
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "cross-env": "^5.0.5",
+        "css-loader": "^0.28.7",
         "jest": "^20.0.4",
         "path": "^0.12.7",
+        "style-loader": "^0.18.2",
         "uglifyjs-webpack-plugin": "^0.4.6",
         "webpack": "^3.5.5"
     }
