--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build:umd": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
-        "material-ui": "next",
+        "material-ui": "1.0.0-beta.16",
         "normalize.css": "^7.0.0",
         "prop-types": "^15.5.10",
         "react": "^16.0.0",
