--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "react-redux": "^5.0.6",
         "redux": "^3.7.2",
         "redux-saga": "^0.15.6",
-        "xeact": "file:../../JSWorkspace/xeact"
+        "xeact": "^0.0.12"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
