--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build:umd": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
+        "autobind-decorator": "^2.1.0",
         "material-ui": "1.0.0-beta.16",
         "normalize.css": "^7.0.0",
         "prop-types": "^15.5.10",
