--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "autobind-decorator": "^2.1.0",
         "material-ui": "1.0.0-beta.16",
+        "material-ui-icons": "^1.0.0-beta.17",
         "normalize.css": "^7.0.0",
         "prop-types": "^15.5.10",
         "react": "^16.0.0",
