--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "babel-preset-stage-0": "^6.24.1",
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
+        "file-loader": "^1.1.5",
         "jest": "^20.0.4",
         "node-sass": "4.5.0",
         "path": "^0.12.7",
