--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build:umd": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
+        "antd": "^3.1.3",
         "autobind-decorator": "^2.1.0",
         "material-ui": "1.0.0-beta.16",
         "material-ui-icons": "^1.0.0-beta.17",
@@ -24,6 +25,7 @@
         "babel-jest": "^20.0.3",
         "babel-loader": "^7.1.2",
         "babel-plugin-add-module-exports": "^0.2.1",
+        "babel-plugin-import": "^1.6.3",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-react-display-name": "^6.25.0",
         "babel-plugin-transform-runtime": "^6.23.0",
