--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
     "version": "0.0.1",
     "scripts": {
         "dev": "cross-env NODE_ENV=development webpack --watch",
-        "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:min",
+        "build": "npm run build:commonjs && npm run build:umd && npm run build:min",
         "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore *.test.js",
-        "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore *.test.js",
         "build:umd": "cross-env NODE_ENV=development webpack",
         "build:min": "cross-env NODE_ENV=production webpack"
     },
     "files": [
         "dist",
         "lib",
-        "src",
-        "es"
+        "src"
     ],
     "main": "lib/index.js",
-    "module": "es/index.js",
     "dependencies": {
         "antd": "^3.3.0",
         "autobind-decorator": "^2.1.0",
@@ -42,10 +39,14 @@
         "babel-preset-latest": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
+        "babel-runtime": "^6.26.0",
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
+        "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^1.1.5",
         "jest": "^20.0.4",
+        "less": "^3.0.1",
+        "less-loader": "^4.1.0",
         "node-sass": "4.5.0",
         "path": "^0.12.7",
         "sass-loader": "^6.0.6",
