--- a/package.json
+++ b/package.json
@@ -1,58 +1,61 @@
 {
-    "name": "ola-ui",
-    "version": "0.0.1",
-    "scripts": {
-        "dev": "cross-env NODE_ENV=development webpack --watch",
-        "build": "npm run build:commonjs && npm run build:umd && npm run build:min",
-        "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore *.test.js",
-        "build:umd": "cross-env NODE_ENV=development webpack",
-        "build:min": "cross-env NODE_ENV=production webpack"
-    },
-    "files": [
-        "dist",
-        "lib",
-        "src"
-    ],
-    "main": "lib/index.js",
-    "dependencies": {
-        "antd": "^3.3.0",
-        "autobind-decorator": "^2.1.0",
-        "prop-types": "^15.5.10",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-redux": "^5.0.6",
-        "redux": "^3.7.2",
-        "redux-saga": "^0.15.6",
-        "xeact": "^0.0.12"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.0",
-        "babel-jest": "^20.0.3",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-add-module-exports": "^0.2.1",
-        "babel-plugin-import": "^1.6.3",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-plugin-transform-react-display-name": "^6.25.0",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-latest": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "babel-runtime": "^6.26.0",
-        "cross-env": "^5.0.5",
-        "css-loader": "^0.28.7",
-        "extract-text-webpack-plugin": "^3.0.2",
-        "file-loader": "^1.1.5",
-        "jest": "^20.0.4",
-        "less": "^3.0.1",
-        "less-loader": "^4.1.0",
-        "node-sass": "4.5.0",
-        "path": "^0.12.7",
-        "sass-loader": "^6.0.6",
-        "style-loader": "^0.18.2",
-        "uglifyjs-webpack-plugin": "^0.4.6",
-        "url-loader": "^0.6.2",
-        "webpack": "^3.5.5"
-    }
+  "name": "ola-ui",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack --watch",
+    "build": "npm run remove-dist && npm run build:commonjs && npm run build:umd && npm run build:min",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore *.test.js",
+    "build:umd": "cross-env NODE_ENV=development webpack",
+    "build:min": "cross-env NODE_ENV=production webpack",
+    "remove-dist": "rimraf ./dist"
+  },
+  "files": [
+    "dist",
+    "lib",
+    "src"
+  ],
+  "main": "lib/index.js",
+  "dependencies": {
+    "antd": "^3.3.0",
+    "autobind-decorator": "^2.1.0",
+    "prop-types": "^15.5.10",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
+    "xeact": "^0.0.12"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-import": "^1.6.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-display-name": "^6.25.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "jest": "^20.0.4",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "node-sass": "4.5.0",
+    "path": "^0.12.7",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.5.5"
+  }
 }
