--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,22 @@
 {
-    "presets": [
-        "react",
-        "es2015",
-        "stage-0"
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
     ],
-    "plugins": [
-        "transform-runtime",
-        "add-module-exports",
-        "transform-decorators-legacy",
-        "transform-react-display-name",
-        [
-            "import",
-            {
-                "libraryName": "antd",
-                "style": true
-            }
-        ]
+    [
+      "@babel/preset-react"
     ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ]
+  ]
 }
