--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
+    "autoprefixer": "^10.3.1",
     "core-js": "3",
     "cross-env": "^5.0.5",
+    "daisyui": "^1.9.0",
     "jest": "^20.0.4",
     "path": "^0.12.7",
+    "postcss": "^8.3.5",
     "rimraf": "^2.6.2",
     "rollup": "^2.53.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "tailwindcss": "^2.2.4"
   }
 }
